--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en" dir="ltr">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-
-<style media="screen">
-.form-box {
-  margin-top: 70px;
-}
-.navigation {
-    margin-top: 39px;
-}
-</style>
   <head>
     <meta charset="utf-8">
     <title>{% block title %} Todo App {% endblock %}</title>
